test/files/neg/t8323c.check
t8323c.scala:5: error: double definition:
def f(x: String("Bippy")): String at line 4 and
def f(x: String("Dingo")): String at line 5
have same type after erasure: (x: String)String
  def f(x: b.type) = x
      ^
one error found
